express-crud/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: ingress-express-crud
  annotations: 
    kubernetes.io/elb.class: union # can be union or performance
    kubernetes.io/elb.port: '80' # can be 80 or 443
    kubernetes.io/elb.id: 4694254b-3b77-4354-af70-3feefebdd1f9 # ID Load Balancer
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/elb.tls-ciphers-policy: tls-1-2 #if you have ssl
spec:
  rules: 
  - host: 'cce-demo.rahadian.dev'
    http: 
      paths: 
      - path: "/"
        pathType: Prefix
        backend: 
          service:
            name: express-crud-service
            port:
              number: 3000
        # property:
        #   ingress.beta.kubernetes.io/url-match-mode: STARTS_WITH
